Update README with deployment note and contribution info
Added note about early deployment phase and Windows-only availability, along with cloning instructions and contribution guidelines.